--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -43,6 +43,24 @@ services:
     ports:
       - 5431:5432
 
+  test_db_server:
+    container_name: test_db_server
+    image: postgres:latest
+    restart: always
+    env_file:
+      - "./.env"
+
+    environment:
+      - POSTGRES_USER=${POSTGRES_USERNAME}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - POSTGRES_DB=${POSTGRES_TEST_DB}
+      - PGDATA=/var/lib/postgresql/data/
+
+    expose:
+      - 5432
+    ports:
+      - 5432:5432
+
   adminer:
     image: adminer
     container_name: db_adminer
