--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -14,4 +14,4 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: Build the Docker image
-        run: docker build --tag my-image-name:$(date +%s) .
+        run: docker build -t "my-image-name:$(date +%s)" -f .backend/Dockerfile .
