--- a/.github/workflows/building_docker_compose.yml
+++ b/.github/workflows/building_docker_compose.yml
@@ -10,8 +10,12 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-
+    environment: staging
     steps:
+      - name: Create env file
+        run: |
+          echo "${{ secrets.ENV_VALUES }}" > .env
+
       - uses: actions/checkout@v3
       - name: Build with docker-compose
         run: docker-compose build
