experimenting(workflow): validating .env file creation

--- a/.github/workflows/building_docker_compose.yml
+++ b/.github/workflows/building_docker_compose.yml
@@ -20,6 +20,16 @@ jobs:
         run: |
           echo "Path to .env file: $(pwd)/.env"
           echo "First value in .env file: $(grep -oP '^[^#]\S+' .env | head -n 1)"
+
+      - name: Check if .env file exists
+        run: |
+          if [ -e .env ]; then
+            echo ".env file exists."
+          else
+            echo "Error: .env file not found."
+            exit 1
+          fi
+
       - uses: actions/checkout@v3
       - name: Build with docker-compose
         run: docker-compose build
