--- a/.github/workflows/building_docker_compose.yml
+++ b/.github/workflows/building_docker_compose.yml
@@ -32,4 +32,4 @@ jobs:
 
       - uses: actions/checkout@v3
       - name: Build with docker-compose
-        run: docker-compose build
+        run: docker-compose --env-file .env build
