--- a/example.env
+++ b/example.env
@@ -1,8 +1,9 @@
-# This is an example of a .env file for JosefsFastAPITemplate (jfat).
-# Copy this file to .env and fill in the values as needed.
-# Make sure to keep the .env file secret and do not share it publicly.
+# This is an example of a .env file for JosefsFastAPITemplate (jfat) which can be used for the development.
+# Copy the content of this file to a .env and fill in the values as needed.
+# Make sure to not expose sensitive information in your .env file.
+# !! Do not use this file in production !!
 
-ENVIRONMENT=dev
+ENVIRONMENT=DEV
 DEBUG=True
 TESTING=True
 
