--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,59 +1,47 @@
 default_install_hook_types: [pre-commit]
-default_stages: [commit, push]
+default_stages: [pre-commit, pre-push]
 default_language_version:
-  python: python3.10
+    python: python3.11
 ci:
     autofix_commit_msg: |
         ci(pre-commit): Autofixing commit msg from pre-commit.com hooks
     autofix_prs: true
-    autoupdate_branch: ''
-    autoupdate_commit_msg: 'ci(autoupdate): Autoupdating commit msg'
+    autoupdate_branch: ""
+    autoupdate_commit_msg: "ci(autoupdate): Autoupdating commit msg"
     autoupdate_schedule: weekly
     skip: []
     submodules: false
 repos:
--   repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.5.0
-    hooks:
-    -   id: check-yaml
-    -   id: end-of-file-fixer
-    -   id: trailing-whitespace
-        files: ^backend/
--   repo: https://github.com/psf/black
-    rev: 23.11.0
-    hooks:
-    -   id: black
-        language_version: python3.10
-        args:
-        - --config=backend/pyproject.toml
--   repo: https://github.com/pycqa/isort
-    rev: 5.12.0
-    hooks:
-    -   id: isort
-        name: isort (python)
-        args:
-        - --settings-path=backend/pyproject.toml
--   repo: https://github.com/codespell-project/codespell
-    rev: v2.2.4
-    hooks:
-    -   id: codespell
-        additional_dependencies:
-        - tomli
--   repo: https://github.com/pre-commit/mirrors-mypy
-    rev: "v0.991"
-    hooks:
-    -   id: mypy
-        args:
-        - --config-file=backend/pyproject.toml
-- repo: https://github.com/pre-commit/mirrors-prettier
-  rev: "v3.0.0-alpha.4"
-  hooks:
-    - id: prettier
-      files: \.[jt]sx?$
-      types_or: [css, javascript]
--   repo: https://github.com/pre-commit/mirrors-eslint
-    rev: "v8.31.0"
-    hooks:
-    -   id: eslint
-        files: \.[jt]sx?$  # *.js, *.jsx, *.ts and *.tsx
-        types: [file]
+    - repo: https://github.com/pre-commit/pre-commit-hooks
+      rev: v5.0.0
+      hooks:
+          - id: check-yaml
+          - id: end-of-file-fixer
+          - id: trailing-whitespace
+            files: ^backend/
+    - repo: https://github.com/psf/black
+      rev: 25.1.0
+      hooks:
+          - id: black
+            language_version: python3.11
+            args:
+                - --config=backend/pyproject.toml
+    - repo: https://github.com/pycqa/isort
+      rev: 6.0.1
+      hooks:
+          - id: isort
+            name: isort (python)
+            args:
+                - --settings-path=backend/pyproject.toml
+    - repo: https://github.com/codespell-project/codespell
+      rev: v2.4.1
+      hooks:
+          - id: codespell
+            additional_dependencies:
+                - tomli
+    - repo: https://github.com/pre-commit/mirrors-mypy
+      rev: "v1.15.0"
+      hooks:
+          - id: mypy
+            args:
+                - --config-file=backend/pyproject.toml
