--- a/backend/Dockerfile copy
+++ b/backend/Dockerfile copy
@@ -1,4 +1,4 @@
-# Pull official latest Python Docker image (Pulished with version 3.10.9)
+# Pull official latest Python Docker image (Published with version 3.10.9)
 FROM --platform=linux/amd64 python:3.11.1-slim
 
 # Set the working directory
