--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -106,6 +106,9 @@ addopts = '''
     --numprocesses=auto
     --asyncio-mode=auto
 '''
+asyncio_default_fixture_loop_scope = "session"
+asyncio_default_test_loop_scope = "session"
+
 
 [tool.coverage.run]
 source = ["src"] # Specify the source directory or directories
