fix(environments): made it easier to start the application in a test or dev environment

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,7 @@ services:
 
     environment:
       - WATCHFILES_FORCE_POLLING=true
+      - ENVIRONMENT=${ENVIRONMENT}
 
     volumes:
       - ./backend/src/:/usr/backend/src/
