--- a/.github/workflows/continuous_integration.yml
+++ b/.github/workflows/continuous_integration.yml
@@ -23,11 +23,17 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
+      - name: Generate .env file from repository variables
+        run: |
+          echo "Generating .env file from repository variables..."
+          gh variable list --json name,value | jq -r '.[] | "\(.name)=\(.value)"' > .env
+          echo ".env file generated."
+
       - name: Build remaining images with docker compose
-        run: docker compose build
+        run: docker compose build --env-file .env
 
       - name: Start docker compose
-        run: ENVIRONMENT=STAGING docker compose up
+        run: ENVIRONMENT=STAGING docker compose up --env-file .env
 
       - name: Wait for services to be healthy
         run: |
