--- a/example.env
+++ b/example.env
@@ -1,12 +1,11 @@
 # This is an example of a .env file for JosefsFastAPITemplate (jfat) which can be used for the development.
-# Copy the content of this file to a .env and fill in the values as needed.
+# Copy the content of this file to a .env placed in the backend folder and fill in the values as needed.
 # Make sure to not expose sensitive information in your .env file.
 # !! Do not use this file in production !!
 
-ENVIRONMENT=DEV
 DEBUG=True
 TESTING=True
-
+#ENVIRONMENT=STAGING
 BACKEND_SERVER_HOST=127.0.0.1
 BACKEND_SERVER_PORT=8000
 BACKEND_SERVER_WORKERS=4
@@ -21,11 +20,10 @@ ALLOWED_HEADER_1=*
 
 # Database - Postgres
 POSTGRES_DEV_DB=jfat_dev_db
-POSTGRES_DB=jfat_dev_db
 POSTGRES_TEST_DB=jfat_test_db
 POSTGRES_PASSWORD=postgres13240!
 POSTGRES_PORT=5432
-POSTGRES_SCHEMA=postgresql
+POSTGRES_SCHEMA=postgresql+asyncpg
 POSTGRES_USERNAME=postgres
 API_TOKEN=jfatmlpj-api1-ml13-poke-2x359u3ss63a
 AUTH_TOKEN=jfatmlpj-api1-ml23-poke-2x359u3ss63a
@@ -35,7 +33,8 @@ POSTGRES_ECHO=True
 # This is the host for Docker Postgres Image in docker-compose.yaml
 POSTGRES_DEV_HOST=jfat_dev_db_host
 POSTGRES_TEST_HOST=jfat_test_db_host
-POSTGRES_URI={POSTGRES_SCHEMA}://{POSTGRES_USERNAME}:{POSTGRES_PASSWORD}@{POSTGRES_HOST}:{POSTGRES_PORT}/{POSTGRES_DB}
+POSTGRES_DEV_URI = {POSTGRES_SCHEMA}://{POSTGRES_USERNAME}:{POSTGRES_PASSWORD}@{POSTGRES_DEV_HOST}:{POSTGRES_PORT}/{POSTGRES_DEV_DB}
+POSTGRES_TEST_URI = {POSTGRES_SCHEMA}://{POSTGRES_USERNAME}:{POSTGRES_PASSWORD}@{POSTGRES_TEST_HOST}:{POSTGRES_PORT}/{POSTGRES_TEST_DB}
 
 # Database - SQLAlchemy
 DB_TIMEOUT=5
@@ -48,43 +47,43 @@ IS_DB_EXPIRE_ON_COMMIT=False
 IS_DB_FORCE_ROLLBACK=True
 
 # JWT Token
-JWT_SECRET_KEY=
-JWT_SUBJECT=header
-JWT_TOKEN_PREFIX=
-JWT_ALGORITHM=HS256
-JWT_MIN=60
-JWT_HOUR=23
-JWT_DAY=6
+# JWT_SECRET_KEY=
+# JWT_SUBJECT=header
+# JWT_TOKEN_PREFIX=
+# JWT_ALGORITHM=HS256
+# JWT_MIN=60
+# JWT_HOUR=23
+# JWT_DAY=6
 
 # Hash Functions
-BCRYPT_HASHING_ALGORITHM=bcrypt
-ARGON2_HASHING_ALGORITHM=argon2
-SHA256_HASHING_ALGORITHM=sha256_crypt
-SHA512_HASHING_ALGORITHM=sha512_crypt
-HASHING_SALT=joseffastapitemplate
-PWD_ALGORITHM_LAYER_1=bc
-PWD_ALGORITHM_LAYER_2=a2
+# BCRYPT_HASHING_ALGORITHM=bcrypt
+# ARGON2_HASHING_ALGORITHM=argon2
+# SHA256_HASHING_ALGORITHM=sha256_crypt
+# SHA512_HASHING_ALGORITHM=sha512_crypt
+# HASHING_SALT=joseffastapitemplate
+# PWD_ALGORITHM_LAYER_1=bc
+# PWD_ALGORITHM_LAYER_2=a2
 
 # Codecov (Login to Codecov and get your TOKEN)
-CODECOV_TOKEN=
+# CODECOV_TOKEN=
 
 # AWS S3
-AWS_S3_BUCKET=
-AWS_IAM_USERNAME=
-AWS_IAM_ARN=
-AWS_ACCESS_KEY=
-AWS_SECRET_ACCESS_KEY=
-AWS_SERVICE_NAME=
-AWS_SERVICE_REGION=eu-central-1
+# AWS_S3_BUCKET=
+# AWS_IAM_USERNAME=
+# AWS_IAM_ARN=
+# AWS_ACCESS_KEY=
+# AWS_SECRET_ACCESS_KEY=
+# AWS_SERVICE_NAME=
+# AWS_SERVICE_REGION=eu-central-1
 
 
 # Mailing
-MAIL_USERNAME=
-MAIL_PASSWORD=
-MAIL_FROM=
-MAIL_PORT=587
-MAIL_SERVER=
-MAIL_TLS=True
-MAIL_SSL=True
-MAIL_DEBUG=False
-MAIL_USE_CREDENTIALS=True
+# MAIL_USERNAME=
+# MAIL_PASSWORD=
+# MAIL_FROM=
+# MAIL_PORT=587
+# MAIL_SERVER=
+# MAIL_TLS=True
+# MAIL_SSL=True
+# MAIL_DEBUG=False
+# MAIL_USE_CREDENTIALS=True
