fix(ci): added more fine grained permission

--- a/.github/workflows/continuous_integration.yml
+++ b/.github/workflows/continuous_integration.yml
@@ -16,6 +16,10 @@ jobs:
     name: 'Build and Start docker compose'
     runs-on: ubuntu-latest
 
+    permissions:
+      actions: read
+      contents: write  # Ensure permission to write the .env file
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
