fix(ci): added more fine grained permission

--- a/.github/workflows/continuous_integration.yml
+++ b/.github/workflows/continuous_integration.yml
@@ -16,9 +16,7 @@ jobs:
     name: 'Build and Start docker compose'
     runs-on: ubuntu-latest
 
-    permissions:
-      actions: read
-      contents: write
+    permissions: write-all
 
     steps:
       - name: Checkout repository
