--- a/.github/workflows/continuous_integration.yml
+++ b/.github/workflows/continuous_integration.yml
@@ -15,7 +15,7 @@ jobs:
   build:
     name: 'Build and Start docker compose'
     runs-on: ubuntu-latest
-    
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
@@ -23,17 +23,21 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
-      - name: Generate .env file from repository variables
+      - name: Generate .env file
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          echo "Generating .env file..."
+          touch .env
+
+      - name: Add repository variables to .env file
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           echo "Generating .env file from repository variables..."
-          gh variable list --json name,value > temp_variables.json
-          for row in $(cat temp_variables.json | python -c "import sys, json; [print(f'{item['name']}={item['value']}') for item in json.load(sys.stdin)]"); do
-            echo "$row" >> .env
-          done
-          rm temp_variables.json
+          gh variable list --json name,value | jq -r '.[] | "\(.name)=\(.value)"' > .env
           echo ".env file generated."
-        env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
 
       - name: Build remaining images with docker compose
         run: docker compose build --env-file .env
