--- a/.github/workflows/continuous_integration.yml
+++ b/.github/workflows/continuous_integration.yml
@@ -23,20 +23,10 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
-      - name: Generate .env file
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          echo "Generating .env file..."
-          touch .env
-
       - name: Add environment variables from repository secret to .env file
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          ENV_FILE: ${{ secrets.ENV_FILE }}
         run: |
           echo ".env file from repository variables..."
-          echo "${{ secrets.ENV_FILE }}" > .env
+          echo "${{ secrets.ENV_VARIABLES }}" > .env
 
       - name: Build remaining images with docker compose
         run: docker compose build
