--- a/.github/workflows/continuous_integration.yml
+++ b/.github/workflows/continuous_integration.yml
@@ -20,15 +20,22 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
+        with:
+          fetch-depth: 0 # Fetch all history for all branches and tags
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
-      - name: Add environment variables from repository secret to .env file
-        run: |
-          echo ".env file from repository variables..."
-          echo "${{ secrets.ENV_VARIABLES }}" > .env
+      - name: Generate .env file from secret
+        run: echo "${{ secrets.ENV_VARIABLES }}" > .env
 
-      - name: Build remaining images with docker compose
+      
+      - name: Read POSTGRES_USERNAME from .env file and print it
+        id: read_env
+        run: |
+          echo "POSTGRES_USERNAME=$(grep POSTGRES_USERNAME .env | cut -d '=' -f2)" >> $GITHUB_ENV
+
+      - name: Build docker compose
         run: docker compose build
 
       - name: Start docker compose
