fix(ci): trying to add cache

--- a/.github/workflows/continuous_integration.yml
+++ b/.github/workflows/continuous_integration.yml
@@ -39,11 +39,9 @@ jobs:
 
       - name: Build docker compose
         run: |
-          docker compose build \
-            --build-arg BUILDKIT_INLINE_CACHE=1 \
-            --cache-from=type=local,src=/tmp/.buildx-cache \
-            --cache-to=type=local,dest=/tmp/.buildx-cache
-
+          docker buildx bake --file docker-compose.yml \
+            --set *.cache-from=type=local,src=/tmp/.buildx-cache \
+            --set *.cache-to=type=local,dest=/tmp/.buildx-cache
 
       - name: Build docker compose
         run: docker compose build -d
