--- a/.github/workflows/continuous_integration.yml
+++ b/.github/workflows/continuous_integration.yml
@@ -30,7 +30,7 @@ jobs:
         run: echo "${{ secrets.ENV_VARIABLES }}" > .env
 
       - name: Build docker compose
-        run: docker compose build -d
+        run: docker compose build -q
 
       - name: Start docker compose
         run: ENVIRONMENT=STAGING docker compose up
