--- a/.github/workflows/continuous_integration.yml
+++ b/.github/workflows/continuous_integration.yml
@@ -57,15 +57,7 @@ jobs:
         
       - name: Run tests
         run: |
-          docker exec -it web pytest --disable-warnings -v tests/ > result.log
-          if grep -q "failed" result.log; then
-            echo "Tests failed. Exiting."
-            exit 1
-          else
-            echo "Tests passed."
-          fi
-          # delete the result.log file after the tests are done
-          rm result.log
+          docker exec -it web pytest 
         
       - name: Stop dockercompose
         if: always()
