--- a/.github/workflows/continuous_integration.yml
+++ b/.github/workflows/continuous_integration.yml
@@ -57,7 +57,14 @@ jobs:
         
       - name: Run tests
         run: |
-          docker exec -it web pytest 
+          docker exec $(docker ps -qf "name=web") pytest --disable-warnings -v tests/ > result.log
+          if grep -q "failed" result.log; then
+            echo "Tests failed. Exiting."
+            exit 1
+          else
+            echo "Tests passed."
+          fi
+          rm result.log
         
       - name: Stop dockercompose
         if: always()
