fix(ci): trying to make test output work

--- a/.github/workflows/continuous_integration.yml
+++ b/.github/workflows/continuous_integration.yml
@@ -57,17 +57,7 @@ jobs:
         
       - name: Run tests
         run: |
-          docker exec $(docker ps -qf "name=web") pytest > result.log
-          echo "$(<result.log )"
-          if grep -q "failed" result.log; then
-            echo "Tests failed. Exiting."
-            exit 1
-          else
-            echo "Tests passed."
-          fi
-          echo "Test results:"
-
-          rm result.log
+          docker exec $(docker ps -qf "name=web") pytest
         
       - name: Stop dockercompose
         if: always()
