fix(ci): trying to make test output work

--- a/.github/workflows/automated_tests.yml
+++ b/.github/workflows/automated_tests.yml
@@ -1,12 +1,7 @@
-name: 'Continous Integration'
+name: 'Automated Tests'
 
 on:
   workflow_dispatch:
-  push:
-    branches:
-      - 'feature/*'
-      - 'fix/*'
-      - 'refactor/*'
   pull_request:
     branches:
       - 'trunk'
