testing status badge

--- a/.github/workflows/automated_tests.yml
+++ b/.github/workflows/automated_tests.yml
@@ -15,7 +15,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: FAILING
+      - name: FAILING!
         run: exit 1
 
       - name: Checkout repository
