--- a/.github/workflows/automated_tests.yml
+++ b/.github/workflows/automated_tests.yml
@@ -7,7 +7,7 @@ on:
   
   push:
     branches:
-      - '*'
+      - '**'
     
 jobs:
   build:
@@ -15,6 +15,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: FAILING!
+        run: exit 1
+
       - name: Checkout repository
         uses: actions/checkout@v3
 
