testing(readme): making status check fail to see if this is reflected by the status badge

--- a/.github/workflows/automated_tests.yml
+++ b/.github/workflows/automated_tests.yml
@@ -12,6 +12,9 @@ jobs:
 
     steps:
 
+      - name: FAIL
+        run: exit 1
+
       - name: Checkout repository
         uses: actions/checkout@v3
 
