--- a/.github/workflows/automated_tests.yml
+++ b/.github/workflows/automated_tests.yml
@@ -11,6 +11,8 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: FAIL
+        run: exit 1
 
       - name: Checkout repository
         uses: actions/checkout@v3
