--- a/.github/workflows/automated_tests.yml
+++ b/.github/workflows/automated_tests.yml
@@ -18,6 +18,17 @@ jobs:
         with:
           fetch-depth: 0 # Fetch all history for all branches and tags
 
+      - name: Exit successfully if only docs or README changes 
+        run: |
+
+          if git diff --name-only origin/trunk | grep -vE '^(docs/|README\.md)'; then
+            echo "Changes found outside docs or README"
+            
+          else
+            echo "Only docs or README changes found. Exiting."
+            exit 0
+          fi
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
